--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-* {
-    box-sizing: border-box; 
-}
+
 
 body {
     width: 80vw;
@@ -40,4 +38,28 @@ a:hover {
     height: 25px;
     transition: 0.2s;
     background-color: purple;
+}
+
+
+/*  traffic lights  */
+#trafficLight {
+    border: 1px solid black;
+    float:right;
+}
+#trafficLight>div {
+    margin: 5px;
+    width: 50px;
+    height: 50px;
+}
+#firstLight {
+    border: 5px solid #8c2617;
+    background-color: #ed452f;
+}
+#secondLight {
+    border: 5px solid #9b9c1b;
+    background-color: #fdf733;
+}
+#thirdLight {
+    border: 5px solid #2e6402;
+    background-color: #3c8007;
 }
