--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 * {
     box-sizing: border-box;
     color: #080808;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 
 body {
     width: 100vw;
     height:100vh;
     margin: 0;
     overflow-x: hidden;
-    background-color: f8f1f5;
+    background-color: #f8f1f5;
 }
 
 
@@ -18,26 +20,38 @@ body {
 
 header {
     top: 0;
-    position: sticky;
+    position: fixed;
     box-shadow: 0px 2px 10px black;
+    width: 100vw;
     height: 110px;
     padding: 15px;
     background-color: #ecd7e2;
 }
 
 h1 {
+    margin:0;
     text-align: center;
     font-weight: 100;
+    font-family: 'Miss Fajardose', cursive;
+    font-size: 4em;
 }
-h1>span {
-    font-weight: bold;
+h2 {
+    font-family: 'Miss Fajardose', cursive;
+    font-size: 3em;
+    font-weight: 100;
 }
 
 main {
-    height: auto;
-    width: 80vw;
-    padding: 2vh 10vw;
+    display: flex;
+    flex-wrap: wrap;
+    width: 75vw;
+    margin-top:110px;
 }
+
+p, h2, blockquote, address {
+    margin: 2vh 15vw;
+}
+
 blockquote {
     border-left: 3px dashed gray;
     padding: 10px;
@@ -55,19 +69,22 @@ aside {
     box-shadow: -1px 4px 5px black;
     width: 20vw;
     min-width: 200px;
-    height: 150%;
+    height: 100vh;
+    overflow: hidden;
     border: solid gray;
     border-width: 1px 0px;
     padding: 15px 0;
     background-color: #f2e4ec;
     text-align: center;
 }
-
 aside>img {
     width: 17vw;
     min-width: 150px;
     border-radius: 50%;
     border: 1px solid black;
+}
+aside>h2 {
+    margin: auto;
 }
 
 nav>ul {
@@ -83,7 +100,7 @@ nav>ul>li {
 }
 nav>ul>li:hover {
     box-shadow: inset 0px 0px 8px rgb(17, 44, 16), 
-                2px 4px 5px gray;
+    2px 4px 5px gray;
 }
 
 footer {
@@ -91,6 +108,18 @@ footer {
     background-color: #e6cad9;
     border-top: 3px dashed gray;
 }
+
+figure {
+    align-self: center;
+    width: fit-content;
+    border: 1px solid black;
+}
+figure>img {
+    width: 350px;
+}
+
+
+
 
 /***************************************\
     playing around with hover effects
@@ -121,6 +150,8 @@ footer {
     background-color: purple;
     z-index: 1;
 }
+
+
 
 
 /********************\
