--- a/poster_shop/style.css
+++ b/poster_shop/style.css
@@ -6,9 +6,20 @@ body {
     width: 100vw;
     height:100vh;
     margin: 0;
-    border: 1px solid black;
+    background-color: black;
 }
 
 header {
     background-color: #3DE07E;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
+header h1 {
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 5rem;
+    color: #222222;
+    margin-bottom: 15%;
+}
+
