--- a/poster_shop/style.css
+++ b/poster_shop/style.css
@@ -2,12 +2,21 @@
     box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
+
 body {
     width: 100vw;
     height:100vh;
     margin: 0;
     background-color: black;
     color: white;
+    font-family: 'Fira Sans', sans-serif;
+}
+
+h1 {
+    font-size: 1.5rem;
+    line-height: 0px;
+    font-weight: 700;
 }
 
 header {
@@ -28,12 +37,75 @@ header h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 100px 10%;
+    margin: 0 10%;
 }
 .smallCard {
+    display: flex;
+    flex-direction: column;
     width: 25%;
-    margin: 15px;
+    height: 440px;
+    margin: 50px 15px;
 }
 .smallCard img {
     max-width: 100%;
+}
+
+button {
+    margin-top:auto;
+    border-radius: 4px;
+    border: 1px solid #E83F57;
+    padding: 5px;
+    color: white;
+    font-weight: 700;
+    background: #E83F57;
+    width: fit-content;
+}
+
+
+.bigCardContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 10%;
+}
+.bigCard {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    height: 550px;
+    margin: 50px 15px;
+    background-color: white;
+    color: black;
+}
+.bigCard img {
+    max-width: 100%;
+}
+.bigCard p {
+    padding: 10px;
+}
+.bigCard h1{
+    padding: 10px;
+}
+.bigCard button {
+    margin-bottom: 10px;
+    margin-left: 10px;
+    padding: 10px;
+}
+
+footer {
+    background: rgba(255, 255, 255, 0.2);
+}
+
+.footerContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;    
+    margin: 0 10%;
+    padding: 5%;
+}
+.footerContainer * {
+    width: 150px;
+    list-style: none;
+    padding: 0;
+    font-style: normal;
 }
