main content done

--- a/Layouts/everythingIsDesign/index.html
+++ b/Layouts/everythingIsDesign/index.html
@@ -33,13 +33,58 @@
 
     <main>
         <section class="cardWrapper">
+            <article class="big">
+                <nav class="hamburgerMenu">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </nav>
+                <div><img src="../../img/placeholder_img.svg"></div>
+                <h2>card title</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
+                </p>
+            </article>
             <article>
                 <nav class="hamburgerMenu">
                     <div></div>
                     <div></div>
                     <div></div>
                 </nav>
-                <img src="../../img/icons8-picture-64.png">
+                <div><img src="../../img/placeholder_img.svg"></div>
+                <h2>card title</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
+                </p>
+            </article><article>
+                <nav class="hamburgerMenu">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </nav>
+                <div><img src="../../img/placeholder_img.svg"></div>
+                <h2>card title</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
+                </p>
+            </article><article>
+                <nav class="hamburgerMenu">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </nav>
+                <div><img src="../../img/placeholder_img.svg"></div>
+                <h2>card title</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
+                </p>
+            </article><article>
+                <nav class="hamburgerMenu">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </nav>
+                <div><img src="../../img/placeholder_img.svg"></div>
                 <h2>card title</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
