quote thingy done

--- a/Layouts/everythingIsDesign/index.html
+++ b/Layouts/everythingIsDesign/index.html
@@ -68,11 +68,6 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo blanditiis neque tempora corrupti suscipit quisquam aliquam, adipisci dolore maiores. Hic, fugiat dolorem dolorum ex distinctio aspernatur quis suscipit error quod?
                 </p>
             </article><article>
-                <nav class="hamburgerMenu">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </nav>
                 <div><img src="../../img/placeholder_img.svg"></div>
                 <h2>card title</h2>
                 <p>
@@ -91,6 +86,12 @@
                 </p>
             </article>
         </section>
+
+        <aside class="quote">
+            <div class="placeholder"></div>
+            <quote> "Holy smokes batman!"</quote>
+            <address> Robin </address>
+        </aside>
     </main>
 </body>
 </html>
