--- a/Layouts/everythingIsDesign/index.html
+++ b/Layouts/everythingIsDesign/index.html
@@ -93,5 +93,33 @@
             <address> Robin </address>
         </aside>
     </main>
+
+    <footer>
+        <section class="footerWrap">
+            <section class="footerSection">
+                <h1>Nav</h1>
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Services</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
+            </section>
+            <section class="footerSection">
+                <h1>About us</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo accusantium aliquam dolores cum sequi dicta quibusdam, beatae deleniti voluptas? Excepturi ad ipsam suscipit maiores officia, autem libero debitis quam corporis.</p>
+            </section>
+            <section class="footerSection">
+                <h1>Social media</h1>
+                <section class="socialIcons">
+                    <img src="../../img/icons8-facebook-64.png">
+                    <img src="../../img/icons8-youtube-64.png">
+                    <img src="../../img/icons8-twitter-64.png">
+                </section>
+            </section>
+        </section>
+    </footer>
 </body>
 </html>
