Half of main, hero section header, done-ish
Just noticed that the hero section and header has a background, so I'll have to re-organize my code a bit for it to work.

--- a/Layouts/downloadOurApp/index.html
+++ b/Layouts/downloadOurApp/index.html
@@ -11,9 +11,75 @@
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="script.js"></script>
 
-    <title>BOO!</title>
+    <title>Download out app</title>
 </head>
 <body>
+    <header>
+        <img src="../../img/zocom-logo.svg">
+        
+        <nav>
+            <ul>
+                <li>HOME</li>
+                <li>HOW IT WORKS</li>
+                <li>FEATURES</li>
+                <li>PRESS</li>
+                <li>PRICING</li>
+                <li>CONTACT</li>
+            </ul>
+        </nav>
+        
+        <button>GET A QUOTE</button>
+    </header>
     
+    <main>
+        <section class="hero">
+            <h1>Download our App</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. nemo praesentium at beatae nesciunt velit deserunt impedit!</p>
+            <section class="getApp">
+                <img src="appStore.svg">
+                <img src="googlePlay.svg">
+            </section>
+            <img src="phone.svg">
+        </section>
+        
+        <section class="products">
+            <h1>Our products</h1>
+            <section class="cardWrapper">
+                <section class="productCard">
+                    <div class="placeholder"><img src="../../img/placeholder_img.svg"></div>
+                    <h2>Green Cap</h2>
+                    <p>US$29</p>
+                </section>
+                
+                <section class="productCard">
+                    <div class="placeholder"><img src="../../img/placeholder_img.svg"></div>
+                    <h2>Zara shirt</h2>
+                    <p>US$19.90</p>
+                </section>
+                
+                <section class="productCard">
+                    <div class="placeholder"><img src="../../img/placeholder_img.svg"></div>
+                    <h2>Nike Air</h2>
+                    <p>US$34</p>
+                </section>
+                
+                <section class="productCard">
+                    <div class="placeholder"><img src="../../img/placeholder_img.svg"></div>
+                    <h2>Nerd tshirt</h2>
+                    <p>US$9,99</p>
+                </section>
+            </section>
+
+        </section>
+        <section class="collections">
+            collections
+        </section>
+    </main>
+    
+    <footer>
+        <section class="contactCard">
+            <h1>Contact us</h1>
+        </section>
+    </footer>
 </body>
 </html>
