--- a/Layouts/downloadOurApp/index.html
+++ b/Layouts/downloadOurApp/index.html
@@ -15,23 +15,23 @@
 </head>
 <body>
     <header>
-        <img src="../../img/zocom-logo.svg">
-        
-        <nav>
-            <ul>
-                <li>HOME</li>
-                <li>HOW IT WORKS</li>
-                <li>FEATURES</li>
-                <li>PRESS</li>
-                <li>PRICING</li>
-                <li>CONTACT</li>
-            </ul>
-        </nav>
-        
-        <button>GET A QUOTE</button>
-    </header>
-    
-    <main>
+        <section class="headerbar">
+            <img src="../../img/zocom-logo.svg">
+            
+            <nav>
+                <ul>
+                    <li>HOME</li>
+                    <li>HOW IT WORKS</li>
+                    <li>FEATURES</li>
+                    <li>PRESS</li>
+                    <li>PRICING</li>
+                    <li>CONTACT</li>
+                </ul>
+            </nav>
+            
+            <button>GET A QUOTE</button>
+        </section>
+
         <section class="hero">
             <h1>Download our App</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. nemo praesentium at beatae nesciunt velit deserunt impedit!</p>
@@ -41,8 +41,11 @@
             </section>
             <img src="phone.svg">
         </section>
-        
-        <section class="products">
+    </header>
+    
+    <main>
+    
+    <section class="products">
             <h1>Our products</h1>
             <section class="cardWrapper">
                 <section class="productCard">
