all the caaards

--- a/Layouts/downloadOurApp/index.html
+++ b/Layouts/downloadOurApp/index.html
@@ -48,34 +48,42 @@
     <section class="products">
             <h1>Our products</h1>
             <section class="cardWrapper">
-                <section class="productCard">
+                <section class="product card">
                     <div class="placeholder"><img src="../../img/placeholder_img.svg"></div>
                     <h2>Green Cap</h2>
                     <p>US$29</p>
                 </section>
                 
-                <section class="productCard">
+                <section class="product card">
                     <div class="placeholder"><img src="../../img/placeholder_img.svg"></div>
                     <h2>Zara shirt</h2>
                     <p>US$19.90</p>
                 </section>
                 
-                <section class="productCard">
+                <section class="product card">
                     <div class="placeholder"><img src="../../img/placeholder_img.svg"></div>
                     <h2>Nike Air</h2>
                     <p>US$34</p>
                 </section>
                 
-                <section class="productCard">
+                <section class="product card">
                     <div class="placeholder"><img src="../../img/placeholder_img.svg"></div>
                     <h2>Nerd tshirt</h2>
                     <p>US$9,99</p>
                 </section>
-            </section>
 
-        </section>
-        <section class="collections">
-            collections
+                <section class="collection card">
+                    <h2>COLLECTION</h2>
+                    <p>Summer 2021</p>
+                    <button>CHECK IT OUT</button>
+                </section>
+                
+                <section class="collection card">
+                    <h2>COLLECTION</h2>
+                    <p>Summer 2021</p>
+                    <button>CHECK IT OUT</button>
+                </section>
+            
         </section>
     </main>
     
