header, introduction thingy and first box is done

--- a/Layouts/NectarGrid/index.html
+++ b/Layouts/NectarGrid/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.svg">
+        <img src="img/logo.svg">
         <nav>
             <ul>
                 <li>RECIPIES</li>
@@ -25,8 +25,8 @@
             </ul>
         </nav>
         <section>
-            <img src="search.svg">
-            <img src="menu.svg">
+            <img src="img/search.svg">
+            <img src="img/menu.svg">
         </section>
     </header>
 
@@ -38,8 +38,31 @@
         </section>
         
         <section class="recipiesWrapper">
-            <article class="recipeCard">
-                content
+            <article class="recipeCard bigCard">
+
+                <figure>
+                    <img src="img/pancakes.jpg">
+                </figure>
+                <container class="content">
+                    <containder class="interact">
+                        <img src="img/like.svg">
+                        <img src="img/context_menu.svg">
+                    </containder>
+
+                    <container class="rating">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_light.svg">
+                        <p>321</p>
+                    </container>
+
+                    <h4>Breakfast</h4>
+                    <h1>VEGAN BLUEBERRY PANCAKES WITH MANDARINE SAUCE & SPICES</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem natus laborum rerum laboriosam nobis consequatur?</p>
+                    <img src="img/more_button.svg">
+                </container>
             </article>
 
             <article class="recipeCard">
