--- a/Layouts/NectarGrid/index.html
+++ b/Layouts/NectarGrid/index.html
@@ -44,10 +44,10 @@
                     <img src="img/pancakes.jpg">
                 </figure>
                 <container class="content">
-                    <containder class="interact">
+                    <container class="interact">
                         <img src="img/like.svg">
                         <img src="img/context_menu.svg">
-                    </containder>
+                    </container>
 
                     <container class="rating">
                         <img src="img/star_dark.svg">
