cards and button, check!

--- a/Layouts/NectarGrid/index.html
+++ b/Layouts/NectarGrid/index.html
@@ -38,7 +38,7 @@
         </section>
         
         <section class="recipiesWrapper">
-            <article class="recipeCard bigCard">
+            <article class="bigCard">
 
                 <figure>
                     <img src="img/pancakes.jpg">
@@ -66,15 +66,51 @@
             </article>
 
             <article class="recipeCard">
-                content
+                <img src="img/breakfast.jpg" class="mainimg">
+                <img src="img/like.svg" class="likeimg">
+
+                <container class="content">
+                    <img src="img/context_menu.svg" class="contextMenu">
+                    <h2>BREAKFAST</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                    <container class="rating">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_light.svg">
+                        <p>92</p>
+                    </container>
+                </container>
             </article>
 
             <article class="recipeCard">
-                content
+                <img src="img/lunch.jpg" class="mainimg">
+                <img src="img/like.svg" class="likeimg">
+
+                <container class="content">
+                    <img src="img/context_menu.svg" class="contextMenu">
+                    <h2>LUNCH</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                    <container class="rating">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_dark.svg">
+                        <img src="img/star_light.svg">
+                        <p>112</p>
+                    </container>
+                </container>
             </article>
             
             <article class="recipeCard">
-                content
+                <img src="img/breakfast.jpg" class="mainimg">
+                <img src="img/like.svg" class="likeimg">
+
+                <container class="content">
+                    <h2>DINNER</h2>
+                    <p>READERS FAVORITE RECIPIES</p>
+                </container>
             </article>
         </section>
 
