--- a/Layouts/NectarGrid/style.css
+++ b/Layouts/NectarGrid/style.css
@@ -70,7 +70,16 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: 100%;
+    height: 150%;
+}
+
+
+main .recipiesWrapper .content .rating {
+    margin-bottom: 15px;
+}
+main .recipiesWrapper .content .rating * {
+    display: inline;
+    margin: auto;
 }
 
 
@@ -98,9 +107,6 @@ main .recipiesWrapper {
     max-width: 1000px;
 }
 
-main .recipiesWrapper .recipeCard {
-    background-color: white;
-}
 
 /* big card */
 main .recipiesWrapper .bigCard {
@@ -109,10 +115,11 @@ main .recipiesWrapper .bigCard {
     overflow: hidden;
     display: flex;
     flex-direction: row;
+    background-color: white;
 }
 
 main .recipiesWrapper .bigCard figure {
-    flex: 2;
+    width: 66%;
     margin: 0;
     padding: 0;
 }
@@ -122,9 +129,9 @@ main .recipiesWrapper .bigCard figure img {
     margin-top: -20%;
 }
 
-/* Content of big card*/
+
 main .recipiesWrapper .bigCard .content {
-    flex: 1;
+    width: 33%;
     padding: 20px 30px;
     display: flex;
     flex-direction: column;
@@ -138,16 +145,8 @@ main .recipiesWrapper .bigCard .content .interact img {
     margin: auto;
 }
 
-main .recipiesWrapper .bigCard .content .rating {
-    margin-bottom: 15px;
-}
-main .recipiesWrapper .bigCard .content .rating * {
-    display: inline;
-    margin: auto;
-}
-
 main .recipiesWrapper .bigCard .content h1, h4 {
-    margin: 0;
+    margin: 5px;
 }
 main .recipiesWrapper .bigCard .content h1 {
     font-weight: 400;
@@ -164,3 +163,53 @@ main .recipiesWrapper .bigCard .content > :last-child {
     align-self: flex-end;
     margin-top: auto;
 }
+
+/* small cards */
+main .recipiesWrapper .recipeCard {
+    background-color: white;
+    max-width: 320px;
+    overflow: hidden;
+    position: relative;
+}
+main .recipiesWrapper .recipeCard .mainimg {
+    height: 250px;
+}
+main .recipiesWrapper .recipeCard .likeimg {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    box-shadow: 0 0 5px 5px #ffffff, inset 0 0 5px 15px #ffffff;
+}
+
+main .recipiesWrapper .recipeCard .content > * {
+    padding: 0 10px;
+}
+main .recipiesWrapper .recipeCard .content > .contextMenu {
+    float: right;
+    margin-top: 25px;
+    margin-right: 15px;
+}
+
+main .recipiesWrapper .recipeCard:last-child {
+    background-color: #EEEEEE;
+}
+main .recipiesWrapper .recipeCard:last-child .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 185px;
+
+    text-align: center;
+    line-height: 0.5rem;
+}
+
+/* LE BUTTON */
+main button {
+    padding: 20px 40px;
+    border-radius: 50px;
+    font-weight: 800;
+    border: 3px solid  #222222;
+    background-color: #eeeeee00;
+}
+
