some categories taking form

--- a/Layouts/NectarGrid/index.html
+++ b/Layouts/NectarGrid/index.html
@@ -117,7 +117,29 @@
         <button>VIEW ALL RECIPIES</button>
 
         <section class="categoryWrapper">
-            sum f*ing categories
+            <section class="categoryCard">
+                <img src="img/star_dark.svg" class="roundImg">
+                <h1>DESSERTS</h1>
+                <p>Fight your sweet tooth cravings</p>
+            </section>
+
+            <section class="categoryCard">
+                <img src="img/star_dark.svg" class="roundImg">
+                <h1>DESSERTS</h1>
+                <p>Fight your sweet tooth cravings</p>
+            </section>
+
+            <section class="categoryCard">
+                <img src="img/star_dark.svg" class="roundImg">
+                <h1>DESSERTS</h1>
+                <p>Fight your sweet tooth cravings</p>
+            </section>
+
+            <section class="categoryCard">
+                <img src="img/star_dark.svg" class="roundImg">
+                <h1>DESSERTS</h1>
+                <p>Fight your sweet tooth cravings</p>
+            </section>
         </section>
 
         <section class="sumFancyStuff">
